portfolio.css
body {
background-color:#39224f;
}

#mainnav {
  font-family: 'Pacifico', cursive;
   color: #6cebf7;
   background-color:#39224f ;
   background-repeat: no-repeat;
   background-size: 400px 100px;
   width: 90%;
   border: 10px solid #0a767f;
   padding: 10px;
   margin: 20px;
   font-size: 20px;
}

.navtext {
 font-family: 'Pacifico', cursive;
 text-size-adjust: 56px;
 line-height: 1em;
 display: inline-block;
 padding: 20px;
 margin: 30px;
 font-size: 40px;
}

li {
color:	#6cebf7;
}

#portable {
font-size: 20px;
color: 	#6cebf7;
background-color: #045158;
margin-left: auto;
margin-right: auto;
border: 5px solid #0a767f;
width: 90%;
height:300px;
}


#portphoto {
    display: block;  
    margin-left: auto;
    margin-right: auto;
    border-style: solid;
    border-top-color: aqua;
    border-bottom-color: aqua;
    border-left-color: rgba(252, 23, 7, 0.712);
    border-right-color: rgba(252, 23, 7, 0.712);
    border-width: thick;
    background-color: 	#6cebf7;
    background-size: 800px 1500px;
  }

  #footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
    font-family: 'Chango', cursive;
    color: #6cebf7;
    text-underline-position: below;
  }

#page-container {
    position: relative;
    min-height: 100vh;
  }

#content-wrap {
    padding-bottom: 2.5rem; 
    width: 800px;
  }

